# Finetune-distilgpt2-for-imdb-review-classification

./: .gitignore  Model_Evaluation.ipynb  README.md  pyproject.toml
distilbert-distilgpt2-imdb-lora/: README.md  adapter_model.safetensors
distilbert-distilgpt2-imdb-lora/checkpoint-12500/: adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
distilbert-distilgpt2-imdb-lora/checkpoint-3125/: adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
distilbert-distilgpt2-imdb-lora/checkpoint-6250/: adapter_config.json  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
distilbert-distilgpt2-imdb-lora/checkpoint-9375/: adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
lora_peft/: __init__.py  inspect_model.py  lora.py  sequence_classification.py
submission/.ipynb_checkpoints/: LightweightFineTuning-checkpoint.ipynb
submission/distilgpt2-imdb-lora/: adapter_config.json
submission/distilgpt2-imdb-lora/checkpoint-25000/: adapter_config.json  adapter_model.safetensors  merges.html  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
