[tool.poetry]
name = "capstone-project"
version = "0.1.0"
description = ""
authors = ["Mahesh Babu Gorantla <maheshbabugorantla@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.46.3"
torch = "^2.5.1"
torchaudio = "^2.5.1"
torchvision = "^0.20.1"
scikit-learn = "^1.5.2"
jupyter = "^1.1.1"
datasets = "^3.1.0"
peft = "^0.13.2"
tqdm = "^4.67.1"
seaborn = "^0.13.2"
matplotlib = "^3.9.3"
python-language-server = "^0.36.2"
python-lsp-server = {extras = ["all"], version = "^1.12.0"}


[tool.poetry.group.dev.dependencies]
ipython = "^8.30.0"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
